background image added - need  to figure out z-index issue with phone images

--- a/style.css
+++ b/style.css
@@ -352,6 +352,7 @@ body{
 
     #nav-section{
         height: 8vh; /*keeps navbar positioned above hero page*/
+        z-index: 1;
     }
 
     .navbar{
@@ -364,6 +365,7 @@ body{
         border: solid whitesmoke 1px;
         width: 100%;
         height: 8vh;
+        z-index: 1;
     }
 
     .logo{
@@ -424,13 +426,19 @@ body{
         display: flex;
         flex-direction: row;
         background-color: hsl(0, 0%, 98%);
-        
-
+        height: 95vh;
+        background-image: url(./easybank-landing-page-master/images/bg-intro-desktop.svg);
+        background-position-x: 360%;
+        background-position-y: 100%;
+        background-repeat: no-repeat;
+        background-size: 86%;
+        margin-top: 0;
     }
 
     .hero-text-container{
         border: solid;
         padding-left: 5%;
+        width: 60%;
        
     }
 
@@ -439,11 +447,9 @@ body{
 
     .hero-header{
         font-size: 58px;
-        border: solid;
-        width: 75%;
+        width: 80%;
         font-weight: 400;
         margin-top: 25%;
-        height: 13%;
 
     }
 
@@ -451,7 +457,7 @@ body{
         width: 75%;
         text-align: left;
         font-size: 18px;
-        height: 10%;
+        height: 12%;
         line-height: 1.5em;
         color: hsl(233, 8%, 62%);
 
@@ -470,6 +476,8 @@ body{
     }
 
     .hero-img{
+        z-index: 8;
+        position: fixed;
 
     }
     /*Hero Section Ends*/
